crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__tagged_template_literals.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"sql`SELECT * FROM ${table} WHERE id = ${id}`\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 44,
                    },
                },
                span: 0..44,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 44,
                            },
                        },
                        span: 0..44,
                        kind: TaggedTemplateLiteral(
                            TaggedTemplateLiteral {
                                tag: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 3,
                                        },
                                    },
                                    span: 0..3,
                                    name: "sql",
                                },
                                template: TemplateLiteral {
                                    exprs: [
                                        Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 20,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 25,
                                                },
                                            },
                                            span: 20..25,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 20,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 25,
                                                        },
                                                    },
                                                    span: 20..25,
                                                    name: "table",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 40,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 42,
                                                },
                                            },
                                            span: 40..42,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 40,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 42,
                                                        },
                                                    },
                                                    span: 40..42,
                                                    name: "id",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    ],
                                    quasis: [
                                        TemplateElem {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 18,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 26,
                                                },
                                            },
                                            span: 4..18,
                                            raw: Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 18,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 26,
                                                        },
                                                    },
                                                    span: 4..18,
                                                    value: "SELECT * FROM ",
                                                },
                                            ),
                                            cooked: Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 18,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 26,
                                                        },
                                                    },
                                                    span: 4..18,
                                                    value: "SELECT * FROM ",
                                                },
                                            ),
                                        },
                                        TemplateElem {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 38,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 43,
                                                },
                                            },
                                            span: 26..38,
                                            raw: Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 38,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 43,
                                                        },
                                                    },
                                                    span: 26..38,
                                                    value: " WHERE id = ",
                                                },
                                            ),
                                            cooked: Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 38,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 43,
                                                        },
                                                    },
                                                    span: 26..38,
                                                    value: " WHERE id = ",
                                                },
                                            ),
                                        },
                                        TemplateElem {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 3,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 44,
                                                },
                                            },
                                            span: 43..43,
                                            raw: Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 3,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 44,
                                                        },
                                                    },
                                                    span: 43..43,
                                                    value: "",
                                                },
                                            ),
                                            cooked: Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 3,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 44,
                                                        },
                                                    },
                                                    span: 43..43,
                                                    value: "",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
